--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do List</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="animation-container">
+        <img src="image.png" alt="image" class="cute-animation">
+    </div>
 
+    <h1>Simple To-Do List</h1>
+    <div class="container">
+        <input type="text" id="taskInput" placeholder="Enter a new task">
+        <button id="addTaskBtn" class="operationBtn">Add Task</button>
+        <ul id="taskList"></ul>
+        <button id="clearAll" class="operationBtn" >Clear All</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
