--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="animation-container">
-        <img src="image.png" alt="image" class="cute-animation">
+        <img src="image.png" alt="image" class="animation">
     </div>
 
     <h1>Simple To-Do List</h1>
