--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="image.png" alt="image" class="animation">
     </div>
 
-    <h1>Simple To-Do List</h1>
+    <h1>To-Do List ni Jed</h1>
     <div class="container">
         <input type="text" id="taskInput" placeholder="Enter a new task">
         <button id="addTaskBtn" class="operationBtn">Add Task</button>
